Add CI job based on pixi

--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,linux,windows,jupyternotebooks
+
+# pixi environments
+.pixi
+*.egg-info
