Move all pixi jobs to ubuntu-latest

--- a/.github/workflows/test-pixi.yaml
+++ b/.github/workflows/test-pixi.yaml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         # Windows disabled as a workaround for https://github.com/ami-iit/mujoco-urdf-loader/issues/11
         os: [
-          ubuntu-24.04,
+          ubuntu-latest,
           macos-latest
         ]
     steps:
